- add counter - changed pre-hackathon workshop - fixed mobile cutoff

--- a/css/hackathon.css
+++ b/css/hackathon.css
@@ -9,9 +9,9 @@ box-sizing: border-box;
 
 
 .header{
-  height: 20vh;
+  height: 10vh;
   width: 100%;
-
+background-color:rgba(0,0,0,.8);
   overflow: hidden;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
@@ -263,6 +263,17 @@ color: #ffffff;
   flex-wrap: wrap;
 }
 
+.box_container2{
+  width:100%;
+  margin-top:10%;
+  margin-bottom: 10%;
+  display:flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+
+
 .box_container .box{
   position: relative;
   width:320px;
@@ -274,7 +285,31 @@ color: #ffffff;
   -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
 }
 
+.box_container2 .box{
+  position: relative;
+  width:30%;
+  height: 20%;
+  background:#1c1c1c;
+  border-radius: 20px;
+  padding: 5%;
+  }
+
+
 .box_container .box:before{
+  content:'';
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height: 100%;
+  border-radius: 20px;
+  background:#7C83FD;
+  transform:scaleY(0);
+  transform-origin: bottom;
+  transition: transform 0.5s;
+}
+
+.box_container2 .box:before{
   content:'';
   position: absolute;
   top:0;
@@ -410,7 +445,32 @@ align-items: center;
 
 }
 
+.card_sec .box_container2{
+  width:80%;
+  height:100%;
+  left:10%;
+  margin-top:10%;
+  display:flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position:relative;
+  align-items: center;
+
+}
+
 .card_sec .box_container .box{
+  position: relative;
+  width:320px;
+  height: 300px;
+  background:rgba(255, 255, 255, 0.2);
+  border-radius: 20px;
+  margin-top: 40px;
+  padding: 50px 40px 60px;
+  box-shadow: 0 15px 45px rgba(0,0,0,.3);
+
+}
+
+.card_sec .box_container2 .box{
   position: relative;
   width:320px;
   height: 300px;
@@ -433,7 +493,23 @@ align-items: center;
 
 }
 
+.card_sec .box_container2 .box:before{
+  content:'';
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height: 100%;
+  border-radius: 20px;
+
+}
+
 .card_sec .box_container .box:hover:before{
+  border-radius: 20px;
+
+}
+
+.card_sec .box_container2 .box:hover:before{
   border-radius: 20px;
 
 }
@@ -446,6 +522,16 @@ align-items: center;
   color:#fff;
   transition: 0.5s;
 }
+
+.card_sec .box_container2 .box h3{
+  position: relative;
+  vertical-align: middle;
+  font-size: 20px;
+  z-index: 2;
+  color:#fff;
+  transition: 0.5s;
+}
+
 
 .text-container3{
   width: 100%;
@@ -493,6 +579,19 @@ a{
 
 }
 
+.card_sec2 .box_container2{
+  width:50%;
+  height:100%;
+  left:10%;
+  margin-top:10%;
+  display:flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position:relative;
+  align-items: center;
+
+}
+
 .card_sec2 .box_container .box2{
   position: relative;
   width:320px;
@@ -507,6 +606,8 @@ a{
   align-items: center;
 
 }
+
+
 
 
 .card_sec2 .box_container .box2 img{
@@ -649,6 +750,7 @@ color: #ffffff;
       overflow-x: hidden; /* Hide horizontal scrollbar */
   overflow-y: scroll; /* Add vertical scrollbar */
   }
+
   .text-container .title_word{
   font-size: 3em;
     text-align: center;
@@ -701,7 +803,7 @@ font-size: 3em;
 
 
 .logo{
-  width: 35%;
+  width: 40%;
 }
 
 .logo .neureality{
